--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ Hello there, awesome person!
         <title>My awesome web page</title>
 </head>
   <body>
-    Hello there, awesome person! 
+  <img src="https://octodex.github.com/images/vinyltocat.png">
+   Hello there, awesome person! 
   </body>
 </html>
