--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ Hello there, awesome person!
 </head>
   <body>
   <h1> Hai </h1>
+<img src="https://octodex.github.com/images/vinyltocat.png">
+
     Hello there, awesome person! 
   
   </body>
