--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ Hello there, awesome person!
 </head>
   <body>
   <h1> Hai </h1>
-<img src="https://octodex.github.com/images/vinyltocat.png">
-
+<img src="https://avatars.githubusercontent.com/u/73230972?v=4">
     Hello there, awesome person! 
   
   </body>
