--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <img src="https://avatars.githubusercontent.com/u/73230972?v=4">
   <ol>
     <li>Instagram</li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
     <li>Youtube</li>
     <li>Facebook</li>
  </ol>
